correction de l'alignement des boutons Save, Cancel , Delete

--- a/course/tobi/static/tobi/style.css
+++ b/course/tobi/static/tobi/style.css
@@ -199,6 +199,7 @@ body, html {
 .form_tobi textarea,
 .form_tobi label
 {
+    display: inline-block;
     font-family: Georgia, "Times New Roman", Times, serif;
     font-size: 16px;
     color: #fff;
